part2/manifests/service-logoutput.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-logoutput-svc
spec:
  type: ExternalName
  externalName: logoutput-svc.apps-ns.svc.cluster.local
  ports:
    - port: 1235
