part2/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: logoutput-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: default-pingpong-stripprefix@kubernetescrd
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: todoserver-svc
            port:
              number: 1234
      - pathType: Prefix
        path: "/logs"
        backend:
          service:
            name: logoutput-svc
            port: 
              number: 1235
      #- pathType: Prefix
      #  path: "/pingpong"
      #  backend:
      #   service:
      #     name: pingpong-svc
      #     port:
      #       number: 1236
